cluster_snapshots/GHSAFE-2026-04-19_18-00-13/ingress/ingressclass.public.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    annotations:
      ingressclass.kubernetes.io/is-default-class: "false"
      meta.helm.sh/release-name: traefik
      meta.helm.sh/release-namespace: traefik
    creationTimestamp: <redacted>
    generation: 1
    labels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: traefik
      helm.sh/chart: traefik-39.0.7
    name: traefik
    resourceVersion: <redacted>
    uid: <redacted>
  spec:
    controller: traefik.io/ingress-controller
kind: List
metadata:
  resourceVersion: <redacted>
