cluster_snapshots/GHSAFE-2026-04-19_18-00-13/ingress/poc_ingress.public.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"mc-poc-proof-ingress-traefik","namespace":"poc"},"spec":{"ingressClassName":"traefik","rules":[{"host":"proof.mumblehighlife.de","http":{"paths":[{"backend":{"service":{"name":"mc-poc-amd64","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: <redacted>
    generation: 1
    name: mc-poc-proof-ingress-traefik
    namespace: poc
    resourceVersion: <redacted>
    uid: <redacted>
  spec:
    ingressClassName: traefik
    rules:
    - host: proof.mumblehighlife.de
      http:
        paths:
        - backend:
            service:
              name: mc-poc-amd64
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: <redacted-ip>
        ports:
        - port: 32080
          protocol: TCP
        - port: 32443
          protocol: TCP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"mc-poc-roulette-ingress-traefik","namespace":"poc"},"spec":{"ingressClassName":"traefik","rules":[{"host":"proof-random.mumblehighlife.de","http":{"paths":[{"backend":{"service":{"name":"mc-poc-roulette","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: <redacted>
    generation: 2
    name: mc-poc-roulette-ingress-traefik
    namespace: poc
    resourceVersion: <redacted>
    uid: <redacted>
  spec:
    ingressClassName: traefik
    rules:
    - host: proof-random.mumblehighlife.de
      http:
        paths:
        - backend:
            service:
              name: mc-poc-roulette
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: <redacted-ip>
        ports:
        - port: 32080
          protocol: TCP
        - port: 32443
          protocol: TCP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"webtop-a2g-debian-traefik","namespace":"poc"},"spec":{"ingressClassName":"traefik","rules":[{"host":"a2g-debian.mumblehighlife.de","http":{"paths":[{"backend":{"service":{"name":"webtop-a2g-debian","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: <redacted>
    generation: 1
    name: webtop-a2g-debian-traefik
    namespace: poc
    resourceVersion: <redacted>
    uid: <redacted>
  spec:
    ingressClassName: traefik
    rules:
    - host: a2g-debian.mumblehighlife.de
      http:
        paths:
        - backend:
            service:
              name: webtop-a2g-debian
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: <redacted-ip>
        ports:
        - port: 32080
          protocol: TCP
        - port: 32443
          protocol: TCP
kind: List
metadata:
  resourceVersion: <redacted>
